...
                onValueChange = viewModel::onQueryChange,
                singleLine = true,
                maxLines = 1,
                label = { Text("Search Repositories") },
                modifier = Modifier
                    .weight(1f)
                    .testTag("SearchInput")
            )
            Spacer(modifier = Modifier.width(8.dp))
            Button(
                onClick = viewModel::performSearch,
                modifier = Modifier.testTag("SearchButton")
            ) {
...
