...
                    modifier = Modifier.testTag("SearchTab"),
                    selected = selectedTabIndex == 0,
                    onClick = { selectedTabIndex = 0 },
                    icon = { 
                        Icon(
                            imageVector = Icons.Filled.Search,
                            contentDescription = "Search"
                        )
                    },
                    label = { Text("Search") }
                )
                NavigationBarItem(
                    modifier = Modifier.testTag("HotTab"),
...
                            contentDescription = "Hot"
                        )
                    },
                    label = { Text("Hot") }
                )
                NavigationBarItem(
                    modifier = Modifier.testTag("ProfileTab"),
                    selected = selectedTabIndex == 2,
                    onClick = { selectedTabIndex = 2 },
                    icon = { 
                        Icon(
                            imageVector = Icons.Filled.Person,
                            contentDescription = "Profile"
                        )
                    },
                    label = { Text("Profile") }
                )
            }
        }
...
